[package]
name = "ausize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protos = { path = "internal/protos" }
env_logger = "0.11.5"
log = "0.4.22"
tokio = {  version = "1.40.0", features = ["full"] }


[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
#opt-level = 'z' # only have smaller size after strip
rpath = true