[package]
name = "protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "3.2", features = ["with-bytes"] }
bytes = { version = "1.4", features = ["serde"] }

prost = "0.11.9"
serde = { version = "1.0.171", features = ["derive"] }
tonic = "=0.9.2"
tokio-stream = "0.1"

[build-dependencies]
protobuf-codegen = { version = "3.2" }
prost-build = "0.11.9"
tonic-build = "=0.9.2"